--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<h1>Hello</h1>
-		<h2>This is a test</h2>
+		<h2 id="targetText">This is a test</h2>
+		<button onclick="changeText()"></button>
+		<script src="test.js"/>
 	</body>
 </html>
