--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="css/style.css" rel="stylesheet">
+		<script src="/test.js"/>
 	</head>
 	<body>
 		<h1>Hello</h1>
 		<h2 id="targetText">This is a test</h2>
-		<button onclick="changeText()"></button>
-		<script src="test.js"/>
+		<button onclick="changeText()">Change text</button>
 	</body>
 </html>
