fix stupid mistake

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
+		<script src="test.js"></script>
 		<h1>Hello</h1>
 		<h2 id="targetText">This is a test</h2>
 		<button onclick="changeText()">Change text</button>
-		<script src="test.js"/>
 	</body>
 </html>
