--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	</head>
 	<body>
 		<script src="test.js"></script>
+		<script>
+			loadData()
+		</script>
 		<h1>Hello</h1>
 		<h2 id="targetText">This is a test</h2>
 		<button onclick="changeText()">Change text</button>
